recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:12: error: identifier expected but ')' found.
  right(90.)
           ^