recursion.logo.square.FourSquare.scala.code
def square() {
  forward(100.0)
  left(90.0)
  forward(100.0)
  left(90.0)
  forward(100.0)
  left(90.0)
  forward(100.0)
}
override def run() {
  square()
  right(90.)
  
  
  
}